class Endereco:
    def __init__(self, cep, rua, bairro,cidade):
        self.cep = cep
        self.rua = rua
        self.bairro = bairro
        self.cidade = cidade
        
end01 = Endereco('91790-241', 'bento gonçalves 555', 'jardim carvalho', 'poa')
end02 = Endereco('92890-541', 'ipiranga 241', 'lomba pinheiro', 'sapucaia')
