@startuml herenca composicao

title Diagrama de Classes

class Pessoa{
    - nome:String
    - cpf:String
    - rg: String
    - idade: Int
    - endereco: Endereco
    + construtor(nome, cpf, rg, data_nascimento, convenio, estado_civil, endereco)
}

class Funcionario{
    - matricula:String
    - pessoa:Pessoa
    + construtor(matricula, pessoa)

}

class Paciente{
    - registro:String
    - historico: String
    - pessoa:Pessoa
    + construtor(matricula, pessoa)
    }

class Carteirinha_de_vacinação{
    - vacinas: Vacinas
    - pessoa: Pessoa
    - calendario_nacional_vacinacao: Calendario_nacional_vacinacao
    + construtor(vacinas, pessoa, posto, calendario_nacional_vacinacao)
} 


class Posto{
    - nome:String
    - telefone: String
    - cnpj: String
    - endereco:Endereco
    + construtor(nome, endereco)
}

class Calendario_nacional_vacinacao{
    - crianca: String
    - adolescente: String
    - adulto: String
    - idosos: String
    + construtor(crianca, adolescente, adulto, idosos)
} 

class Endereco{
    - cep:Int
    - rua:String
    - bairro: String
    - cidade: String
    + construtor(cep, rua, bairro, cidade)
}


class Vacinas{
    - nome:String
    - data_fabricacao:String
    - dose: String
    - fabricante: String
    - doenca_tratar: String
    + construtor(nome, data_fabricacao, dose, fabricante, doenca_tratar)
}



class Agendamento_ficha{
    - nficha:String
    - data: String
    - horario: String
    - paciente:Paciente
    - posto: Posto
    + construtor(nficha, data, horario, paciente)
    }

Pessoa <|--> Paciente
Paciente *--> Agendamento_ficha
Agendamento_ficha <--* Posto
Posto<--|> Endereco

Pessoa <|--> Funcionario
Funcionario <--* Posto

Pessoa <|--> Carteirinha_de_vacinação 
Carteirinha_de_vacinação <--* Vacinas
Carteirinha_de_vacinação --> Calendario_nacional_vacinacao

Pessoa <|--> Endereco


@enduml 